@@ -7,19 +7,20 @@ import java.util.stream.Collectors;
 
 public abstract class TriumphType {
 
-	static List<TriumphType> possibleModes = new ArrayList<TriumphType>(Arrays.asList(
-			  new TypeA(),
-			  new TypeB(),
-			  new TypeC()));
-	
+	static List<TriumphType> possibleModes = new ArrayList<TriumphType>( Arrays.asList(new TypeA(),
+			new TypeB(),
+			new TypeC()) );
+
 	public static TriumphType typeFor(Character typeChar) {
 		return possibleModes.stream()
-			    			.filter(typeInstance -> typeInstance.canHandle(typeChar)).collect(Collectors
-							.toList())
-			    			.get(0);
+				.filter(typeInstance -> typeInstance.canHandle(typeChar))
+				.collect(Collectors.toList())
+				.get(0);
 	}
-	
-	public abstract boolean canHandle(Character typeChar);
-	public abstract boolean redWonInCurrentType(Line line);
-	public abstract boolean blueWonInCurrentType(Line line);
+
+	public abstract Line checkMeAsTriumphTypeFor(Line linea);
+	public abstract boolean canHandle(char typeChar);
+	//	public abstract boolean wonInCurrentType(Line line, char color, int column);
+	public abstract boolean verifyTriumphInGameAsTypeWithColorAndColumn(Line line, char color, int column);
+
 }
